Added wrapper logging and fixed some issues with d3d8to9
- Added WrapperLogging to log d3d9.dll API calls
- Fixed a crash in d3d8to9 around palette issues with Indiana Jones and
the Emperor's Tomb
- Fixed a crash in d3d8to9 around failure to CreateDevice with Grand
Theft Auto Vice City
- Removed Direct3D8 unsupported display format in d3d8to9
- Fixed issues with WrapperMode 'Auto' feature in Settings
- Moved wrapper loading logic into each wrapper file

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -6,7 +6,8 @@ ExcludeProcess           =
 IncludeProcess           = 
 RunProcess               = 
 WaitForProcess           = 0
-WrapperMode              = 0
+WrapperMode              = 255
+WrapperLogging           = 0
 
 [Compatibility]
 D3d8to9                  = 0
