Update compatibility modules to no longer require exports
- Update compatibility modules d3d8to9, DDrawCompat and DSoundCtrl to no
longer require exports
- Switched WrapperLogging to a marco rather than a config setting
- Fixed a few minor header issues with d3d9log

--- a/dxwrapper.vcxproj
+++ b/dxwrapper.vcxproj
@@ -68,7 +68,7 @@
     <ClCompile>
       <AdditionalOptions>/IInclude %(AdditionalOptions)</AdditionalOptions>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;DDRAWCOMPAT_EXPORTS;D3D8TO9NOLOG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;WRAPPERLOGGING;DDRAWCOMPAT_EXPORTS;D3D8TO9NOLOG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>false</MinimalRebuild>
       <ExceptionHandling>Async</ExceptionHandling>
       <BasicRuntimeChecks>Default</BasicRuntimeChecks>
