Added AntiAliasing support
- Added AntiAliasing support
- Updated dubug logs to be controlled by macros so they can be used on
non-debug builds
- Added logging macros into logging.cpp

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -9,6 +9,7 @@ WaitForProcess           = 0
 WrapperMode              = 255
 
 [Compatibility]
+AntiAliasing             = 0
 D3d8to9                  = 0
 DDrawCompat              = 0
 DDrawCompatDisableGDIHook = 0
