Added ASI Loading feature

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -21,6 +21,10 @@ HandleExceptions         = 0
 ResetScreenRes           = 0
 SingleProcAffinity       = 0
 
+[Plugins]
+LoadPlugins              = 0
+LoadFromScriptsOnly      = 0
+
 [Window]
 FullScreen               = 0
 ForceWindowResize        = 0
