--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -9,6 +9,10 @@ D3d8to9                  = 0
 DDrawCompat              = 0
 DSoundCtrl               = 0
 
+[Plugins]
+LoadPlugins              = 0
+LoadFromScriptsOnly      = 0
+
 [Window]
 FullScreen               = 0
 ForceWindowResize        = 0
