Create wrapper stub and wrap more dlls
- Created a new wrapper stub to allow loading dxwrapper.dll from memory
- Added MemoryModule to load DxWrapper from memory using the stub
- Added support for wrapping additional dlls: d2d1.dll, d3d10.dll,
d3d10core.dll, d3d11.dll, d3d12.dll, d3dim.dll, d3dim700.dll,
dinput8.dll, msacm32.dll, msvfw32.dll, vorbisfile.dll, winmmbase.dll and
xlive.dll
- Updated to support getting loaded from memory rather than disk
- Fixed issue where memory verification would fail sometimes after
compiling
- Added macros for config settings to simplify the code
- Updated the names of the Config varables to match thier ini file names
- Removed wrapper mode from config file
- Updated wrapper functions to use original API names rather than fake
names

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -6,14 +6,13 @@ ExcludeProcess           =
 IncludeProcess           = 
 RunProcess               = 
 WaitForProcess           = 0
-WrapperMode              = 255
 
 [Compatibility]
 AntiAliasing             = 0
 D3d8to9                  = 0
 DDrawCompat              = 0
 DDrawCompatDisableGDIHook = 0
-DisableHighDpiScaling    = 0
+DisableHighDPIScaling    = 0
 DSoundCtrl               = 0
 DxWnd                    = 0
 ForceTermination         = 0
