Fixed RealDllPath and WrapperMode
- Fixed RealDllPath and WrapperMode on dxwrapper
- Added RealDllPath and WrapperMode support for Stub
- Updated DxWrapper to create asi file

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -1,6 +1,7 @@
 ;; Config file for DirectX DLL Wrapper
 [General]
 RealDllPath              = AUTO
+WrapperMode              = AUTO
 LoadCustomDllPath        = 
 ExcludeProcess           = 
 IncludeProcess           = 
