--- a/Stub/stub.vcxproj
+++ b/Stub/stub.vcxproj
@@ -141,6 +141,7 @@ copy /Y "$(TargetDir)$(TargetName).dll" "$(TargetDir)Build\xlive.dll" &gt;nul</C
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\MemoryModule\MemoryModule.c" />
+    <ClCompile Include="..\Settings\ReadParse.cpp" />
     <ClCompile Include="..\Wrappers\wrapper.cpp" />
     <ClCompile Include="stub.cpp" />
   </ItemGroup>
