Fix Mutex checking
Allow DxWrapper to be loaded more than once from the same dll, required
for some games like Max Payne 1

--- a/dxwrapper.vcxproj.filters
+++ b/dxwrapper.vcxproj.filters
@@ -425,6 +425,9 @@
     <ClInclude Include="D3d8to9\d3d8to9External.h">
       <Filter>D3d8to9</Filter>
     </ClInclude>
+    <ClInclude Include="Settings\ReadParse.h">
+      <Filter>Settings</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Dllmain\BuildNo.rc">
