--- a/dxwrapper.vcxproj
+++ b/dxwrapper.vcxproj
@@ -318,6 +318,7 @@ cmd /c "@echo off &amp;&amp; cd /D ""$(ProjectDir)Dllmain\"" &amp;&amp; type Bui
     <ClInclude Include="libraries\uxtheme.h" />
     <ClInclude Include="libraries\winmm.h" />
     <ClInclude Include="Logging\Logging.h" />
+    <ClInclude Include="Settings\ReadParse.h" />
     <ClInclude Include="Settings\Settings.h" />
     <ClInclude Include="Utils\Utils.h" />
     <ClInclude Include="Wrappers\wrapper.h" />
