--- a/dxwrapper.vcxproj.filters
+++ b/dxwrapper.vcxproj.filters
@@ -428,6 +428,9 @@
     <ClInclude Include="Settings\ReadParse.h">
       <Filter>Settings</Filter>
     </ClInclude>
+    <ClInclude Include="D3d8to9\d3dx9.hpp">
+      <Filter>D3d8to9</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Dllmain\BuildNo.rc">
