Fix issue with wrapper mode detection
Wrapper mode was being detected as dxwrapper.dll for most of the dlls
that were wrapped.

--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -1,6 +1,6 @@
 ;; Config file for DirectX DLL Wrapper
 [General]
-LoadCustomDllPath        = 
+RealDllPath              = 
 RunProcess               = 
 WaitForProcess           = 0
 
